docker compose watch changes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dependencies = []
 
 [tool.uv.workspace]
 members = [
+    "services/orchestrator",
     "services/researcher_agent",
     "services/writer_agent",
-    "orchestrator",
 ]
