--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,8 +2,8 @@
 // README at: https://github.com/devcontainers/templates/tree/main/src/docker-outside-of-docker-compose
 {
 	"name": "Multi Agent System Dev Container",
-	"dockerComposeFile": ["langfuse-docker-compose.yml", "docker-compose.yml"],
-	"service": "orchestrator",
+	"dockerComposeFile": [ "langfuse-docker-compose.yml", "docker-compose.yml"],
+	"service": "devcontainer",
 	"workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
 
 	// Use this environment variable if you need to bind mount your local source code into a new container.
@@ -20,12 +20,12 @@
 		"ghcr.io/devcontainers/features/git:1": {},
 		"ghcr.io/devcontainers/features/python:1": {},
 		"ghcr.io/devcontainers-extra/features/uv:1": {}
-	}
+	},
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "docker --version",
+	"postCreateCommand": "docker compose -f .devcontainer/app-docker-compose.yml up --build --force-recreate --watch"
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
