--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,7 +1,7 @@
 #version: '3'
 
 services:
-  orchestrator:
+  devcontainer:
     build: 
       context: .
       dockerfile: Dockerfile
@@ -24,7 +24,6 @@ services:
 
     # Use "forwardPorts" in **devcontainer.json** to forward an app port locally. 
     # (Adding the "ports" property to this file will not forward from a Codespace.)
-
 
   config-init:
     image: alpine:latest
