--- a/services/orchestrator/pyproject.toml
+++ b/services/orchestrator/pyproject.toml
@@ -7,7 +7,11 @@ authors = [
     { name = "APSAR SHAIK", email = "shaik.apsar@hotmail.com" }
 ]
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "crewai>=1.8.0",
+    "crewai-tools>=1.8.0",
+    "litellm>=1.75.3",
+]
 
 [build-system]
 requires = ["uv_build>=0.8.17,<0.9.0"]
